@@ -1,6 +1,5 @@
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 
 import code.Appointment;
 import code.Booking;
@@ -8,109 +7,123 @@ import code.ClinicService;
 import code.Patient;
 import code.Physiotherapist;
 
+import static org.junit.jupiter.api.Assertions.*;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class MainTest {
     private ClinicService clinicService;
-    private Patient testPatient;
-    private Physiotherapist testPhysio;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         clinicService = new ClinicService();
         clinicService.initializeSampleData();
-        
-        testPatient = new Patient(999, "Test Patient", "Test Address", "555-9999");
-        testPhysio = new Physiotherapist(99, "Test Physio", "Test Clinic", "555-9999", 
-                                       Arrays.asList("Test Therapy"));
-        
-        clinicService.patients.add(testPatient);
-        clinicService.physiotherapists.add(testPhysio);
     }
 
+    // Test Patient class
     @Test
-    public void testAddPatient() {
-        int initialSize = clinicService.patients.size();
-        clinicService.addPatient();
-        assertEquals(initialSize + 1, clinicService.patients.size());
-    }
-
-    @Test
-    public void testRemovePatient() {
-        clinicService.patients.add(testPatient);
-        int initialSize = clinicService.patients.size();
-        clinicService.removePatient();
-        assertEquals(initialSize - 1, clinicService.patients.size());
-    }
-
-    @Test
-    public void testBookAppointment() {
-        // Create a test appointment
-        Appointment testAppointment = new Appointment("Test Therapy", 
-            LocalDateTime.now().plusDays(1), testPhysio);
-        clinicService.appointments.add(testAppointment);
-        
-        // Book the appointment
-        clinicService.bookAppointment();
-        
-        // Verify booking was made
-        assertNotNull(testAppointment.getBooking());
-    }
-
-    @Test
-    public void testChangeOrCancelBooking() {
-        // Create and book a test appointment
-        Appointment testAppointment = new Appointment("Test Therapy", 
-            LocalDateTime.now().plusDays(1), testPhysio);
-        Booking testBooking = new Booking(999, testPatient, "booked");
-        testAppointment.setBooking(testBooking);
-        clinicService.appointments.add(testAppointment);
-        
-        // Test cancel functionality
-        clinicService.changeOrCancelBooking();
-        assertEquals("cancelled", testAppointment.getBooking().getStatus());
-    }
-
-    @Test
-    public void testAttendAppointment() {
-        // Create and book a test appointment
-        Appointment testAppointment = new Appointment("Test Therapy", 
-            LocalDateTime.now().plusDays(1), testPhysio);
-        Booking testBooking = new Booking(999, testPatient, "booked");
-        testAppointment.setBooking(testBooking);
-        clinicService.appointments.add(testAppointment);
-        
-        // Test attend functionality
-        clinicService.attendAppointment();
-        assertEquals("attended", testAppointment.getBooking().getStatus());
-    }
-
-    @Test
-    public void testPrintReport() {
-        // This is more of a smoke test since printReport() outputs to console
-        assertDoesNotThrow(() -> clinicService.printReport());
-    }
-
-    @Test
-    public void testPatientConstructor() {
-        Patient patient = new Patient(100, "John Doe", "123 Street", "555-1234");
+    void testPatientCreation() {
+        Patient patient = new Patient(100, "John Doe", "123 Main St", "555-1234");
         assertEquals(100, patient.getId());
         assertEquals("John Doe", patient.getName());
     }
 
+    // Test Physiotherapist class
     @Test
-    public void testPhysiotherapistExpertise() {
-        List<String> expertise = Arrays.asList("Massage", "Rehab");
-        Physiotherapist physio = new Physiotherapist(1, "Dr. Smith", "Clinic", "555-1111", expertise);
-        assertTrue(physio.getExpertise().contains("Massage"));
+    void testPhysiotherapistCreation() {
+        Physiotherapist physio = new Physiotherapist(1, "Dr. Smith", "456 Oak Ave", "555-5678", 
+            List.of("Physiotherapy", "Rehabilitation"));
+        assertEquals("Dr. Smith", physio.getName());
+        assertTrue(physio.getExpertise().contains("Physiotherapy"));
     }
 
+    // Test Appointment class
     @Test
-    public void testAppointmentDateTime() {
+    void testAppointmentCreation() {
+        Physiotherapist physio = clinicService.physiotherapists.get(0);
         LocalDateTime now = LocalDateTime.now();
-        Appointment appointment = new Appointment("Therapy", now, testPhysio);
-        assertEquals(now, appointment.getDateTime());
+        Appointment appointment = new Appointment("Massage", now, physio);
+        
+        assertEquals("Massage", appointment.getTreatmentName());
+        assertEquals(physio, appointment.getPhysiotherapist());
+    }
+
+    // Test Booking class
+    @Test
+    void testBookingCreation() {
+        Patient patient = clinicService.patients.get(0);
+        Booking booking = new Booking(1, patient, "booked");
+        
+        assertEquals(1, booking.getBookingId());
+        assertEquals(patient, booking.getPatient());
+    }
+
+    // Test ClinicService initialization
+    @Test
+    void testSampleDataInitialization() {
+        assertEquals(3, clinicService.physiotherapists.size());
+        assertEquals(5, clinicService.patients.size());
+        assertTrue(clinicService.appointments.size() >= 15); // 4 weeks of sample data
+    }
+
+    // Test adding a patient
+    @Test
+    void testAddPatient() {
+        int initialCount = clinicService.patients.size();
+        Patient newPatient = new Patient(106, "New Patient", "789 Pine Rd", "555-4321");
+        clinicService.patients.add(newPatient);
+        
+        assertEquals(initialCount + 1, clinicService.patients.size());
+        assertTrue(clinicService.patients.contains(newPatient));
+    }
+
+    // Test booking an appointment
+    @Test
+    void testBookAppointment() {
+        Appointment availableAppointment = clinicService.appointments.stream()
+            .filter(a -> a.getBooking() == null)
+            .findFirst()
+            .orElse(null);
+            
+        assertNotNull(availableAppointment);
+        
+        Patient patient = clinicService.patients.get(0);
+        Booking booking = new Booking(clinicService.nextBookingId++, patient, "booked");
+        availableAppointment.setBooking(booking);
+        
+        assertNotNull(availableAppointment.getBooking());
+        assertEquals(patient, availableAppointment.getBooking().getPatient());
+    }
+
+    // Test finding appointments by physiotherapist
+    @Test
+    void testFindAppointmentsByPhysiotherapist() {
+        Physiotherapist physio = clinicService.physiotherapists.get(0);
+        List<Appointment> physioAppointments = clinicService.appointments.stream()
+            .filter(a -> a.getPhysiotherapist().equals(physio))
+            .collect(Collectors.toList());
+            
+        assertFalse(physioAppointments.isEmpty());
+    }
+
+    // Test appointment status changes
+    @Test
+    void testAppointmentStatusFlow() {
+        Appointment appointment = clinicService.appointments.get(0);
+        Patient patient = clinicService.patients.get(0);
+        
+        // Book appointment
+        Booking booking = new Booking(1, patient, "booked");
+        appointment.setBooking(booking);
+        assertEquals("booked", appointment.getBooking().getStatus());
+        
+        // Attend appointment
+        appointment.getBooking().setStatus("attended");
+        assertEquals("attended", appointment.getBooking().getStatus());
+        
+        // Cancel appointment
+        appointment.getBooking().setStatus("cancelled");
+        assertEquals("cancelled", appointment.getBooking().getStatus());
     }
 }
